feature: migrate static product list to a database table

--- a/Hollox.BlazorEcommerce.Server/Hollox.BlazorEcommerce.Server.csproj
+++ b/Hollox.BlazorEcommerce.Server/Hollox.BlazorEcommerce.Server.csproj
@@ -24,5 +24,9 @@
     <ProjectReference Include="..\Hollox.BlazorEcommerce.Shared\Hollox.BlazorEcommerce.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
