--- a/Hollox.BlazorEcommerce.Server/appsettings.json
+++ b/Hollox.BlazorEcommerce.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=dc-ecommerce-sql-server.database.windows.net; Authentication=Active Directory Interactive; Database=dc-ecommerce-db"
+    "HolloxECommerce": "Server=dc-ecommerce-sql-server.database.windows.net; Authentication=Active Directory Interactive; Database=dc-ecommerce-db"
   },
   "AppSettings": {
     "Token": "my top secret key"
