--- a/Client/Hollox.BlazorEcommerce.Client.csproj
+++ b/Client/Hollox.BlazorEcommerce.Client.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hollox.BlazorEcommerce.Shared\Hollox.BlazorEcommerce.Shared.csproj" />
+    <ProjectReference Include="..\Shared\Hollox.BlazorEcommerce.Shared.csproj" />
   </ItemGroup>
 
 </Project>
