--- a/Server/Application/Hollox.BlazorEcommerce.Application.csproj
+++ b/Server/Application/Hollox.BlazorEcommerce.Application.csproj
@@ -20,11 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hollox.BlazorEcommerce.Shared\Hollox.BlazorEcommerce.Shared.csproj" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\..\Shared\Hollox.BlazorEcommerce.Shared.csproj" />
+    <ProjectReference Include="..\Business\Hollox.BlazorECommerce.Business.csproj" />
+    <ProjectReference Include="..\Repository\Hollox.BlazorECommerce.Repository.csproj" />
   </ItemGroup>
 
 
