--- a/Server/Repository/Hollox.BlazorECommerce.Repository.csproj
+++ b/Server/Repository/Hollox.BlazorECommerce.Repository.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hollox.BlazorEcommerce.Shared\Hollox.BlazorEcommerce.Shared.csproj" />
+    <ProjectReference Include="..\..\Shared\Hollox.BlazorEcommerce.Shared.csproj" />
   </ItemGroup>
 
 </Project>
