chore: rename Shared to ViewModels

--- a/Server/Application/Hollox.BlazorEcommerce.Application.csproj
+++ b/Server/Application/Hollox.BlazorEcommerce.Application.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Hollox.BlazorEcommerce.Shared.csproj" />
+    <ProjectReference Include="..\..\Shared\ViewModel\Hollox.BlazorEcommerce.Shared.ViewModel.csproj" />
     <ProjectReference Include="..\Business\Hollox.BlazorECommerce.Business.csproj" />
     <ProjectReference Include="..\Repository\Hollox.BlazorECommerce.Repository.csproj" />
   </ItemGroup>
