--- a/Server/Repository/Hollox.BlazorECommerce.Repository.csproj
+++ b/Server/Repository/Hollox.BlazorECommerce.Repository.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Hollox.BlazorEcommerce.Shared.csproj" />
+    <ProjectReference Include="..\..\Shared\ViewModel\Hollox.BlazorEcommerce.Shared.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
